Fix borders on the buildbot main console
Two small fixes:
* Remove the extra thick borders around failure panels. These
  make the horizontal one boxes look weird.
* Finally remove the spiky upper left corner of the offline box
  in the legend.

R=maruel@chromium.org

Review URL: https://codereview.chromium.org/1656923002

git-svn-id: svn://svn.chromium.org/chrome/trunk/tools/build@298495 0039d316-1c4b-4281-b951-d872f2087c98

--- a/masters/master.chromium/public_html/default.css
+++ b/masters/master.chromium/public_html/default.css
@@ -144,12 +144,6 @@ td.Activity {
   padding: 2px 0 2px 0;
 }
 
-td.idle, td.waiting, td.offline, td.building {
-  border-top-left-radius: 0px;
-  -webkit-border-top-left-radius: 0px;
-  -moz-border-radius-topleft: 0px;
-}
-
 .LastBuild {
   border-top-left-radius: 5px;
   -webkit-border-top-left-radius: 5px;
@@ -391,7 +385,6 @@ div.BuildWaterfall {
   color: #FFFFFF;
   background-color: #e98080;
   border-color: #A77272;
-  border-width: 3px;
   border-style: solid;
 }
 
